--- a/ArchiveUtility/build.gradle
+++ b/ArchiveUtility/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 group = 'com.github.M-Marvin'
-version = '1.0'
+version = '0.1'
 
 // Add additional content to the manifest
 tasks.named('jar') {
     manifest {
-        attributes('Implementation-Title': project.name,
-                   'Implementation-Version': version,
-                   'Author': 'M_Marvin')
+        attributes('Implementation-Version': version,
+                   'Implementation-Title': project.name,
+                   'Implementation-Vendor-Id': 'de.m_marvin')
     }
 }
 
