--- a/ArchiveUtility/bin/.gitignore
+++ b/ArchiveUtility/bin/.gitignore
@@ -1,3 +1,7 @@
-/default/
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
 /main/
 /test/
